@@ -25,6 +25,7 @@
  *   DATA DECLARATIONS
  */
 typedef enum {
+    K_AND = -2,
     K_NONE = -1,
     K_EXCEPTION,
     K_FUNCTION,
@@ -53,6 +54,7 @@ static struct {
     smlKind kind;
 } SmlKeywordTypes [] = {
     { "abstype",   K_TYPE      },
+    { "and",       K_AND       },
     { "datatype",  K_TYPE      },
     { "exception", K_EXCEPTION },
     { "functor",   K_FUNCTOR   },
@@ -151,6 +153,7 @@ static void findSmlTags (void)
 {
     vString *const identifier = vStringNew ();
     const unsigned char *line;
+    smlKind lastTag = K_NONE;
 
     while ((line = fileReadLine ()) != NULL)
     {
@@ -174,7 +177,13 @@ static void findSmlTags (void)
 	    {
 		cp = skipSpace (cp);
 		cp = parseIdentifier (cp, identifier);
-		makeSmlTag (foundTag, identifier);
+		if (foundTag == K_AND)
+		    makeSmlTag (lastTag, identifier);
+		else
+		{
+		    makeSmlTag (foundTag, identifier);
+		    lastTag = foundTag;
+		}
 	    }
 	    if (strstr ((const char *) cp, "(*") != NULL)
 	    {
